Fixed sign up button misdirect, resizing card blocks on iPhone 7 Plus not a solution

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -748,7 +748,7 @@ h3 {
     }
 
     .card-block {
-        width: 85%;
+        // width: 85%;
     }
 
 }
